workaround for PR#14246
git-svn-id: https://svn.r-project.org/R/trunk@51677 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -79,6 +79,9 @@ BUG FIXES
 	calls in the same way that print(summary(.)) has done already.
 	(PR#14250)
 
+    o	The C function mkCharLenCE now no longer reads past 'len' bytes
+	(unlikely to be a problem except in user code). (PR# 14246)
+
 
 
 
