port r51681 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51682 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -566,6 +566,10 @@ BUG FIXES
 	slightly for one of the extreme bins.  (Based on a report by
 	Martin Becker.)
 
+    o	If xy[z].coords (used internally by many graphics functions) are
+	given a list as 'x', they now check that the list has suitable
+	names and give a more informative error message.  (PR#13936)
+
 
 
 
