use barebones indexing in split.data.frame
git-svn-id: https://svn.r-project.org/R/trunk@51692 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -51,6 +51,8 @@ NEW FEATURES
 	the style of plot.default().  This was not previously
 	documented to work.  (PR#14016)
 
+    o	The date.frame method of split() is faster.  (Wish of PR#14123)
+
 
 DEPRECATED & DEFUNCT
 
