use class generators for "POSIXct" etc
git-svn-id: https://svn.r-project.org/R/trunk@51697 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -54,6 +54,12 @@ NEW FEATURES
     o	The date.frame method of split() is faster.  (Wish of PR#14123)
 
 
+    o	Classes "POSIXct", "POSIXlt" and "difftime" have generators
+	.POSIXct(), .POSIXlt() and .difftime().  Package authors are
+	advised to make use of them (they are available from R 2.11.0)
+	to proof against planned future changes to the classes.
+
+
 DEPRECATED & DEFUNCT
 
     o   Supplying the parser with a string containing both octal/hex and
