fix for bug 13209
git-svn-id: https://svn.r-project.org/R/trunk@51702 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -116,7 +116,8 @@ BUG FIXES
     o	pt() is more accurate in the left tail for ncp large, e.g.
 	pt(-1000, 3, 200).  (PR#14069)
 
-
+   o	The default C code (R_binary) for binary ops now sets the S4
+        bit in the result if either argument is an S4 object.
 
 
 	**************************************************
