first phase of changes to date-time classes
git-svn-id: https://svn.r-project.org/R/trunk@51712 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -65,6 +65,9 @@ NEW FEATURES
 	advised to make use of them (they are available from R 2.11.0)
 	to proof against planned future changes to the classes.
 
+	The ordering of the classes has been changed, so "POSIXt" is
+	now the second class.
+
 
 DEPRECATED & DEFUNCT
 
