--- a/po/RGui-es.po
+++ b/po/RGui-es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: R 2.9.0\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
 "POT-Creation-Date: 2010-04-09 06:27+0100\n"
-"PO-Revision-Date: 2009-10-08 14:40+0100\n"
+"PO-Revision-Date: 2010-04-13 09:37+0100\n"
 "Last-Translator: Pablo Emilio Verde <pabloemilio.verde@uni-duesseldorf.de>\n"
 "Language-Team: Spanish <pabloemilio.verde@uni-duesseldorf.de>\n"
 "MIME-Version: 1.0\n"
@@ -522,7 +522,7 @@ msgstr "Limpar consola"
 
 #: editor.c:760
 msgid "Run all"
-msgstr "Ejecultar todo"
+msgstr "Ejecutar todo"
 
 #: editor.c:763
 msgid "Find..."
