tweaks to diffablility
git-svn-id: https://svn.r-project.org/R/trunk@51732 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -70,8 +70,13 @@ NEW FEATURES
 	changes in R 2.12.x' on developer.r-project.org for the
 	consequences for a handful of CRAN packages.
 
-    o	*Experimental*	list2env()  utility as inverse of as.list(<environment>)
+    o	*Experimental*	list2env()  utility as inverse of
+ 	as.list(<environment>)
 	and for fast multi-assign() to existing environment.
+
+    o	There are several small changes to output which 'zap' small
+	numbers, e.g. in printing quantiled of residuals in summaries
+	from lm annd glm fits, and in test statisions in anovas.
 
 
 DEPRECATED & DEFUNCT
