examples are always converted to UTF-8
git-svn-id: https://svn.r-project.org/R/trunk@51735 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3968,7 +3968,7 @@ On @cputype{x86} you will get marginally higher performance @emph{via}
 CFLAGS="-xO5 -xc99 -xlibmieee -xlibmil -nofstore -xtarget=native"
 FFLAGS="-O5 -libmil -nofstore -xtarget=native"
 CXXFLAGS="-xO5 -xlibmil -nofstore -xtarget=native"
-SAFE_FFLAGS="-O5 -libmil -fstore -xtarget=native"
+SAFE_FFLAGS="-libmil -fstore -xtarget=native"
 @end example
 
 The SunStudio compilers provide several implementations of the C++
