port r51742:3 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51744 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -78,6 +78,8 @@ BUG FIXES
     o	Using ESC to interrupt a system() call could cause R to become
 	unstable.
 
+    o	0^1i (which should be complex NAN) was incorrect.
+
 
 
 
