--- a/NEWS
+++ b/NEWS
@@ -116,6 +116,8 @@ INSTALLATION
 	is now compared to reference output rather than the previous
 	output (if any).
 
+    o	zlib has been updated to 1.2.4.
+
 
 BUG FIXES
 
