support for API change in zlib 1.2.4
git-svn-id: https://svn.r-project.org/R/trunk@51748 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -116,7 +116,8 @@ INSTALLATION
 	is now compared to reference output rather than the previous
 	output (if any).
 
-    o	zlib has been updated to 1.2.4.
+    o	zlib has been updated to 1.2.4: this is also the minimum
+	version required for --with-system-zlib.
 
 
 BUG FIXES
