--- a/NEWS
+++ b/NEWS
@@ -70,6 +70,9 @@ NEW FEATURES
 	changes in R 2.12.x' on developer.r-project.org for the
 	consequences for a handful of CRAN packages.
 
+    o	The "POSIXct" method of as.Date() allows a timezone to be
+	specified (but still defaults to UTC).
+
     o	Experimental  list2env()  utility as inverse of as.list(<environment>)
 	and for fast multi-assign() to existing environment.
 	as.environment() is now generic and uses list2env() as list method.
