source(echo=TRUE) now echos comments following the last expression.
git-svn-id: https://svn.r-project.org/R/trunk@51758 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -145,6 +145,9 @@ BUG FIXES
 
     o	The default C code (R_binary) for binary ops now sets the S4
 	bit in the result if either argument is an S4 object. (PR#13209)
+	
+    o	source(echo=TRUE) failed to echo comments that followed the
+    	last statement in a file.
 
 
 
