replace strlen in mbrtoint = faster utf8ToInt (PR#14262)
git-svn-id: https://svn.r-project.org/R/trunk@51773 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -149,6 +149,9 @@ BUG FIXES
     o	source(echo=TRUE) failed to echo comments that followed the
     	last statement in a file.
 
+    o	more efficient utf8ToInt() on long multi-byte strings with
+	many multi-byte characters (PR#14262)
+
 
 
 
