--- a/NEWS
+++ b/NEWS
@@ -149,8 +149,11 @@ BUG FIXES
     o	source(echo=TRUE) failed to echo comments that followed the
     	last statement in a file.
 
-    o	more efficient utf8ToInt() on long multi-byte strings with
-	many multi-byte characters (PR#14262)
+    o	More efficient utf8ToInt() on long multi-byte strings with
+	many multi-byte characters.  (PR#14262)
+
+    o	aggregate.ts() gave platform-depedent results due to rounding
+	error for ndeltat != 1.
 
 
 
