port r51788 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51789 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1371,11 +1371,7 @@ you need the correct one first in your path if using both.
 A package-building service is available at
 @url{http://win-builder.r-project.org/}, and some notes on porting
 packages can be found at
-@url{http://www.stats.ox.ac.uk/~ripley/Win64/W64porting.html}.  A port
-of Bioconductor package @pkg{Rgraphviz} is available on
-@acronym{CRANextras} (see the previous URL for sources for GraphViz),
-but other Bioconductor packages will at present need to be installed as
-source packages.
+@url{http://www.stats.ox.ac.uk/~ripley/Win64/W64porting.html}.
 
 The default memory limit will be the amount of installed RAM: it can
 be changed by using (preferably) @option{--max-mem-size=} at startup or
